Revision history for Perl extension App::Info.

0.56
      - Added `cgibin_physical()` and `cgibin_virtual()` to
        SVN::Notify::HTTPD::Apache. Patch from Martin Thurn.
      - Removed some superfluous `use Config;`s.

0.55  2008-07-18T16:18:12
      - Fixed some test failures on Windows boxes with PostgreSQL installed.
        Patch from Taro Nishino.

0.54  2008-05-18T04:01:50
      - Added the doc_root() method to App::Info::HTTPD::Apache. Patch
        from Martin Thurn.
      - Added an undistributed spell-checking test, which means that the
        documentation has many fewer spelling errors.

0.53  2008-05-05T17:47:18
      - Added the "configure_requires" and "build_requires" parameters to
        Build.PL.
      - Updated Copyright.

0.52  2007-08-13T18:24:54
      - Fixed test failures on Win32 in 't/util.t.' Reported by Alex Chorny
        via the cpan-testers mail list.
      - Fixed test failure in 't/util.t' for those who happen to have an
        INTERCAL compiler installed. Reported by David Cantrell.

0.51  2006-09-25T17:52:53
      - Really fixed the unsorted test failure by putting the sort in the
        right place.
      - The code that creates the 't/scripts' directory now runs during the
        'code' action rather than the 'build' action, allowing the tests to
        run properly when the 'build' action has not been run. Reported By
        Alex Chorny (Ticket # 21281).
      - Fixed test failures under bleedperl where Carp was not properly
        loaded. Reported by Andreas Koenig (Ticket # 21641).
      - "OS-Dependent" skipped tests in 't/util.t' are no longer OS dependent
        or skipped.

0.50  2006-09-15T23:52:17
      - Fixed test failures due to lack of sorting of files and directories
        returned by files_in_dir() on some platforms.
      - Fixed documentation in App::Info::HTTPD::Apache so that a line of hash
        symbols (#s) doesn't show up in the docs. This actually created an